Адаптация API под изменения
* Теперь в расписании возвращается список групп, вместо одной группы, соответственно ключ group заменен на ключ groups
* Изменены ключи хедеров пагинации (было -> стало)
  page_size -> pageSize
  page_count -> pageCount
* Добавлены поля link и password в расписание. В оргинальном API есть так же поля zoomLink и zoomPassword. В альтернативном API они объеденены, приоритет отдается ссылке в Zoom, если она null, то будет использована link из оригинального API, если и она null придет null в ответе.
* Все вышеописанные изменения внесены в Swagger
